feat: save student profile photos with Cloudinary
